--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: WAX Performance Wiki
-site_url: https://wiki.oneinacillian.io
+site_url: https://wiki.oiac.io
 theme:
   name: material
   logo: assets/logo.png
