--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
   - Hyperion: hyperion.md
   - Atomic API: atomic-api.md
   - PostgreSQL: postgresql.md
+  - Nodeos: nodeos.md
 markdown_extensions:
   - pymdownx.highlight:
       anchor_linenums: true
