seperate OS governor to ubuntu page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,7 @@ nav:
   - Atomic API: atomic-api.md
   - PostgreSQL: postgresql.md
   - Nodeos: nodeos.md
+  - Ubuntu: ubuntu.md
 markdown_extensions:
   - pymdownx.highlight:
       anchor_linenums: true
