--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: WAX Performance Wiki
+site_name: WAX Performance/Maintenance Wiki
 site_url: https://wiki.oiac.io
 theme:
   name: material
